--- a/src/doc_gen/config/tasks.yaml
+++ b/src/doc_gen/config/tasks.yaml
@@ -11,7 +11,7 @@ conversation_generation_task:
   description: >
     Generate a natural conversation between a doctor and a patient based on a medical scenario.
     The conversation should include the patient's symptoms, the doctor's diagnosis, and the prescribed treatment plan.
-    The wording of the conversation uses tone in real situations.
+    The wording of the conversation uses tone like native korean in real situations.
     Follow the format below:
       <example>
         [info] a medical consultation in the Advanced General Dentistry at 2024/05/07
@@ -129,7 +129,7 @@ conversation_generation_task:
       </example>
     Create a conversation that takes place during {situation} in the {department} at {date}.
   expected_output: >
-    A dialogue script that captures the interaction between the doctor and patient, focusing on symptoms, diagnosis, and treatment recommendations.(target language: korean)
+    A dialogue script that captures the interaction between the doctor and patient, focusing on symptoms, diagnosis, and treatment recommendations.(target language: korean only)
   agent: conversation_generator
   context:
     - domain_searching_task
