Refactor pyproject.toml to add arxiv, pymupdf, and xmltodict dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ annotated-types = "^0.7.0"
 xmltodict = "^0.13.0"
 duckduckgo-search = "^6.2.13"
 unsloth = { extras=["cu121-torch240"], git = "https://github.com/unslothai/unsloth.git" }
- 
+arxiv = "*"
+pymupdf = "*"
+xmltodict = "*"
 
 [tool.poetry.scripts]
 doc_gen = "src.doc_gen.main:run"
