--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,15 +5,26 @@ description = "doc_gen using crewAI"
 authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
-python = ">=3.10,<=3.13"
-crewai = { extras = ["tools"], version = ">=0.63.2,<1.0.0" }
-annotated-types = "^0.7.0"
-xmltodict = "^0.13.0"
-duckduckgo-search = "^6.2.13"
-unsloth = { extras=["cu121-torch240"], git = "https://github.com/unslothai/unsloth.git" }
-arxiv = "*"
-pymupdf = "*"
-xmltodict = "*"
+python = ">=3.10, <=3.13"
+crewai = { version = ">=0.67.1", extras = ["tools"] }
+annotated-types = { version = ">=0.7.0" }
+# unsloth = { extras = ["cu121-torch240"], git = "https://github.com/unslothai/unsloth.git" }
+transformers = { git = "https://github.com/huggingface/transformers.git" }
+arxiv = { version = ">=2.1.3" }
+duckduckgo-search = { version = ">=6.2.13" }
+PyMuPDF = { version = ">=1.24.11" }
+xmltodict = { version = ">=0.13.0" }
+langchain = { version = "<0.3.0" }
+langchain-community = { version = "<0.3.0" }
+langchain-core = { version = "<0.3.0" }
+langchain-openai = { version = "<0.3.0" }
+langchain-experimental = { version = "<0.3.0" }
+langchain-cli = { version = ">=0.0.31" }
+langserve = { version = "<0.3.0", extras = ["all"] }
+langgraph = { version = ">=0.2.34" }
+langsmith = { version = ">=0.1.131" }
+vllm = { version = ">=0.6.2" }
+
 
 [tool.poetry.scripts]
 doc_gen = "src.doc_gen.main:run"
