--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,16 @@ langserve = { version = "<0.3.0", extras = ["all"] }
 langgraph = { version = ">=0.2.34" }
 langsmith = { version = ">=0.1.131" }
 vllm = { version = ">=0.6.2" }
+torch = {version = "^2.4.0+cu121", source = "torch"}
+torchvision = {version = "^0.19.0+cu121", source = "torch"}
+torchaudio = {version = "^2.4.0+cu121", source = "torch"}
+ray = {extras = ["all"], version = "^2.37.0"}
+msgpack-python = "^0.5.6"
 
+[[tool.poetry.source]]
+name = "torch"
+url = "https://download.pytorch.org/whl/cu121"
+priority = "explicit"
 
 [tool.poetry.scripts]
 doc_gen = "src.doc_gen.main:run"
