--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,8 +27,9 @@ vllm = { version = ">=0.6.2" }
 torch = {version = "^2.4.0+cu121", source = "torch"}
 torchvision = {version = "^0.19.0+cu121", source = "torch"}
 torchaudio = {version = "^2.4.0+cu121", source = "torch"}
-ray = {extras = ["all"], version = "^2.37.0"}
-msgpack-python = "^0.5.6"
+ray = {extras = ["serve"], version = "^2.37.0"}
+intake = "^2.0.7"
+msgpack = "^1.1.0"
 
 [[tool.poetry.source]]
 name = "torch"
