--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,10 +31,17 @@ ray = {extras = ["serve"], version = "^2.37.0"}
 intake = "^2.0.7"
 msgpack = "^1.0.7"
 asgi-lifespan = "^2.1.0"
+flash-attn = "^2.6.3"
+flashinfer = { version = "^0.1.6", source = "flashinfer" }
 
 [[tool.poetry.source]]
 name = "torch"
 url = "https://download.pytorch.org/whl/cu121"
+priority = "explicit"
+
+[[tool.poetry.source]]
+name = "flashinfer"
+url = "https://flashinfer.ai/whl/cu121/torch2.4/"
 priority = "explicit"
 
 [tool.poetry.scripts]
