--- a/src/doc_gen/config/tasks.yaml
+++ b/src/doc_gen/config/tasks.yaml
@@ -4,7 +4,7 @@ domain_searching_task:
     The search results should be relevant, up-to-date, and provide accurate details that can aid in generating conversations for consultations, treatments, and surgeries between patients and doctors.
     Find the domain specific infomations that takes place during {situation} in the {department} at {date}.
   expected_output: >
-    A summary of the search results, including key information, guidelines, or research findings related to the medical scenario.(target language: korean)
+    Found threatement method text.(target language: korean)
   agent: domain_searcher
 
 conversation_generation_task:
@@ -14,7 +14,13 @@ conversation_generation_task:
     The wording of the conversation uses tone like native korean in real situations.
     Create a conversation that takes place during {situation} in the {department} at {date}.
   expected_output: >
-    A dialogue script that captures the interaction between the doctor and patient, focusing on symptoms, diagnosis, and treatment recommendations.(target language: korean only)
+    A dialogue script without transcription.(target language: korean only)
+    <example>
+    의사 : ..... (dental domain korean natural conversation)
+    환자 : ..... (dental domain korean natural conversation)
+    의사 : ..... (dental domain korean natural conversation)
+    ..........(more than 20 turns)
+    </example>
   agent: conversation_generator
   context:
     - domain_searching_task
@@ -25,11 +31,11 @@ intent_extraction_task:
     Identify and categorize intentions such as symptom reporting, diagnosis requests, treatment discussions, and follow-up arrangements.
     Intent should be a simple word only.
     Follow the format below:
-      * intent1 
+      * intent1 (korean only)
           - intent1 keyword (word only)
           - intent1 keyword (word only)
             ...
-      * intent2 
+      * intent2 (korean only)
           - intent2 keyword (word only)
           - intent2 keyword (word only)
             ...
