--- a/src/doc_gen/config/tasks.yaml
+++ b/src/doc_gen/config/tasks.yaml
@@ -6,7 +6,9 @@ domain_searching_task:
     - Define the domain specific situation that takes place during {situation} in the {department} at {date}.
     step 2:
     - Search for the latest medical guidelines, treatment protocols, and research papers related to the specified medical scenario.
-
+    
+    Let's focus on the treatment procedures and protocols that are most relevant to the patient's symptoms and diagnosis.
+    Go! Find the most recent and effective treatment procedures for the patient's condition.
   expected_output: >
     Found threatement procedure note.
   agent: domain_searcher
