--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ msgpack = "^1.0.7"
 asgi-lifespan = "^2.1.0"
 # flash-attn = "^2.6.3"
 flashinfer = { version = "^0.1.6", source = "flashinfer" }
+modelscope = "^1.19.2"
 
 [[tool.poetry.source]]
 name = "torch"
