--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "chat-ui"]
 	path = chat-ui
 	url = https://github.com/huggingface/chat-ui
+[submodule "deep-searcher"]
+	path = deep-searcher
+	url = https://github.com/zilliztech/deep-searcher.git
