👍 enhancement: Add new submodules and update references
- Added node-deepresearch submodule
- Updated submodule references for chat-ui, llama.cpp, and deep-searcher
- Updated .gitmodules and pyproject.toml with new dependencies

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "deep-searcher"]
 	path = deep-searcher
 	url = https://github.com/zilliztech/deep-searcher.git
+[submodule "node-deepresearch"]
+	path = node-deepresearch
+	url = https://github.com/dzhng/deep-research.git
