--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ crewai = { version = ">=0.67.1", extras = ["tools"] }
 annotated-types = { version = ">=0.7.0" }
 # unsloth = { extras = ["cu121-torch240"], git = "https://github.com/unslothai/unsloth.git" }
 transformers = { git = "https://github.com/huggingface/transformers.git" }
+deepsearcher = {git = "https://github.com/zilliztech/deep-searcher.git"}
 arxiv = { version = ">=2.1.3" }
 duckduckgo-search = { version = ">=6.2.13" }
 PyMuPDF = { version = ">=1.24.11" }
