enhancement: Add OpenManus submodule
- Integrated OpenManus repository as a new Git submodule
- Updated .gitmodules with OpenManus submodule configuration
- Added new submodule reference to OpenManus project

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "node-deepresearch"]
 	path = node-deepresearch
 	url = https://github.com/dzhng/deep-research.git
+[submodule "OpenManus"]
+	path = OpenManus
+	url = https://github.com/mannaandpoem/OpenManus.git
