--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "doc_gen"
 version = "0.1.0"
 description = "doc_gen using crewAI"
-authors = ["Your Name <you@example.com>"]
+authors = ["ppijbb <ppijbb@naver.com>"]
 
 [tool.poetry.dependencies]
 python = ">=3.12, <3.13"
@@ -11,7 +11,7 @@ annotated-types = { version = ">=0.7.0" }
 # unsloth = { extras = ["cu121-torch240"], git = "https://github.com/unslothai/unsloth.git" }
 transformers = { git = "https://github.com/huggingface/transformers.git" }
 deepsearcher = { git = "https://github.com/zilliztech/deep-searcher.git" }
-openmanus = { git = "https://github.com/ppijbb/OpenManus.git", branch="main" }
+openmanus = { git = "https://github.com/ppijbb/OpenManus.git" }
 arxiv = { version = ">=2.1.3" }
 duckduckgo-search = { version = ">=6.2.13" }
 PyMuPDF = { version = ">=1.24.11" }
@@ -30,15 +30,14 @@ litellm = { version = "^1.60.2" }
 torch = { version = "^2.5.1+cu121", source = "torch" }
 torchvision = { version = "^0.20.1+cu121", source = "torch" }
 torchaudio = { version = "^2.5.1+cu121", source = "torch" }
-ray = { extras = ["serve"], version = "^2.37.0" }
+ray = { version = "^2.37.0", extras = ["serve"] }
 intake = "^2.0.7"
 msgpack = "^1.0.7"
 asgi-lifespan = "^2.1.0"
-memO = { version = ">=0.1.76" }
 flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu12torch2.5cxx11abiFALSE-cp312-cp312-linux_x86_64.whl" }
 flashinfer = { version = "^0.1.6", source = "flashinfer" }
 modelscope = "^1.19.2"
-# smolagents = { version = ">1.10.0" }
+smolagents = { version = ">=1.10.0" }
 pymongo = "^4.11.2"
 
 [[tool.poetry.source]]
