✨ enhancement: Add MCP servers submodule and update .gitmodules
- Added MCP servers as a new submodule with its path and URL in .gitmodules
- Included reference for MCP servers in the submodule configuration

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "vllm"]
 	path = vllm
 	url = https://github.com/vllm-project/vllm.git
+[submodule "mcp_servers"]
+	path = mcp_servers
+	url = https://github.com/modelcontextprotocol/servers.git
